<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable name="fragment"
            type="com.serhatd.streamtapedownloader.ui.download.DownloadFragment" />

        <variable name="progressBarVisible"
            type="Boolean" />

        <variable name="progressBarStatus"
            type="Integer" />

        <variable name="downloadLink"
            type="com.serhatd.streamtapedownloader.data.model.DownloadLink" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.download.DownloadFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_background">

                <TextView
                    android:id="@+id/lblTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_title"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginVertical="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btnShowPopup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_more_vert"
                    android:onClick="@{() -> fragment.showPopup(btnShowPopup)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/md_green_400"
                android:text="@string/video_url" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <EditText
                    android:id="@+id/txtVideoUrl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="78"
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:textSize="22sp"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:lines="1"
                    android:hint="@string/video_url_hint" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:textSize="22sp"
                    android:onClick='@{() -> txtVideoUrl.setText("")}'
                    style="@style/buttonRed"
                    android:text="@string/btn_c" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:weightSum="100">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:textSize="22sp"
                    android:onClick="@{() -> fragment.pasteUrl()}"
                    style="@style/buttonBlue"
                    android:text="@string/btn_paste" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="58"
                    android:textSize="22sp"
                    android:onClick="@{() -> fragment.downloadVideo(txtVideoUrl.getText().toString().trim())}"
                    style="@style/buttonGreen"
                    android:text="@string/btn_download" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{progressBarVisible ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutButtons">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:indeterminate="true"
                    app:indicatorSize="90dp" />

                <TextView
                    android:id="@+id/lblProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@{@string/video_is_preparing_to_download(progressBarStatus)}"
                    android:textColor="@color/black"
                    android:textSize="21sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:visibility="@{downloadLink == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutProgress">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/md_green_700" />

                <com.google.android.exoplayer2.ui.StyledPlayerView
                    android:id="@+id/videoPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> fragment.startDownload(downloadLink.url)}"
                    android:text="@string/btn_download_from_app"
                    android:textSize="20sp"
                    style="@style/buttonGreen" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:layout_marginVertical="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="48"
                        android:onClick="@{() -> fragment.downloadViaBrowser(downloadLink.url)}"
                        android:text="@string/btn_download_from_browser"
                        android:textSize="20sp"
                        style="@style/buttonBlue" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="48"
                        android:onClick="@{() -> fragment.copyUrl(downloadLink.url)}"
                        android:text="@string/btn_copy_url"
                        android:textSize="20sp"
                        style="@style/buttonGreen" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>