<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="downloadHistoryRow"
            type="com.serhatd.streamtapedownloader.data.model.DownloadHistoryRow" />

        <variable name="adapter"
            type="com.serhatd.streamtapedownloader.ui.history.HistoryAdapter" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/md_green_400"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/card_lbl_video_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:text="@{downloadHistoryRow.title}" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <ImageView
                    android:id="@+id/imgDeleteHistoryRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="13"
                    android:src="@drawable/ic_delete"
                    android:onClick="@{() -> adapter.deleteDownloadHistoryRow(imgDeleteHistoryRow, downloadHistoryRow.id)}" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/card_lbl_video_url" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:text='@{(downloadHistoryRow.video_url.length > 25) ? downloadHistoryRow.video_url.substring(0, 25) + "..." : downloadHistoryRow.video_url}' />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="13"
                    android:src="@drawable/ic_copy"
                    android:onClick="@{() -> adapter.copyUrl(downloadHistoryRow.video_url)}" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/card_lbl_download_url" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:text='@{(downloadHistoryRow.download_url.length > 25) ? downloadHistoryRow.download_url.substring(0, 25) + "..." : downloadHistoryRow.download_url}' />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="13"
                    android:src="@drawable/ic_copy"
                    android:onClick="@{() -> adapter.copyUrl(downloadHistoryRow.download_url)}" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/buttonDarkGreen"
                android:onClick="@{() -> adapter.openUrl(downloadHistoryRow.video_url)}"
                android:textSize="20sp"
                android:text="@string/card_btn_open" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="49"
                    style="@style/buttonDarkGreen"
                    android:onClick="@{() -> adapter.openUrl(downloadHistoryRow.video_url)}"
                    android:textSize="20sp"
                    android:text="@string/card_btn_download_via_browser" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="49"
                    style="@style/buttonDarkGreen"
                    android:onClick="@{() -> adapter.downloadVideo(downloadHistoryRow.download_url)}"
                    android:textSize="20sp"
                    android:text="@string/card_btn_download" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>